2016-06-11  Kirit Saelensminde  <kirit@felspar.com>
 Show type information for caught `std::exception` instances.

2016-05-29  Kirit Saelensminde  <kirit@felspar.com>
 Improve error display and add logging of errors.

2016-02-28  Kirit Saelensminde  <kirit@felspar.com>
 Allow multiple configuration files to be loaded by the web server and explicitly load up the logging options.

2016-02-10  Yothin Muangsommuk  <yothin@proteus-tech.com>
 Added Date, Expires to static response headers.

2016-02-08  Yothin Muangsommuk  <yothin@proteus-tech.com>
 Implemented 304 response.

2015-11-20  Kirit Saelensminde  <kirit@felspar.com>
 Removed use of deprecated Fost APIs.

2015-09-07  Kirit Saelensminde  <kirit@felspar.com>
 Add the ability for the static view to handle DELETE requests when it's configuration includes `"verbs": {"DELETE": true}`

2015-05-10  Kirit Saelensminde  <kirit@felspar.com>
 Remove uses of auto_ptr.

2015-04-12  Kirit Saelensminde  <kirit@felspar.com>
 Add MIME type for SVG files.

2015-02-25  Kirit Saelensminde  <kirit@felspar.com>
 Added a generic 403 handler.

2014-11-27  Kirit Saelensminde  <kirit@felspar.com>
 Allow web server views to have their own specific setting values.

2014-08-16  Kirit Saelensminde  <kirit@felspar.com>
 Change the web server code to use the new JSON formatted configuration file options. Use command line parameters to control all of the port, host binding and the MIME type configuration.

2014-05-31  Kirit Saelensminde  <kirit@felspar.com>
 Remove logging from the router as it interferes with loaded views trying to manage logging options.

2014-03-02  Kirit Saelensminde  <kirit@felspar.com>
 Split out the top level HTTP parsing from the lower level routing of a request to a view.

2012-08-02  Kirit Saelensminde  <kirit@felspar.com>
 Implemented a proper 301, 302, 303, 405, 500 and 501 responses.

2012-07-06  Kirit Saelensminde  <kirit@felspar.com>
 Added an `all` target so it's compatible with other projects.
